feat: Finish primary header layout (without nav).

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Matveev Timofey CV</title>
   </head>
@@ -21,11 +23,10 @@
           </div>
           <div class="contact-container">
             <ul>
-              <li>+7 962 689 64 79</li>
-              <li>justshowel@gmail.com</li>
-              <li>Discord: Kartearis#6865</li>
-              <li>Github: Kartearis</li>
-              <li>Saint-Petersburg, Russia</li>
+              <li><a href="mailto:justshowel@gmail.com"><span class="material-icons md-24 align">email</span>justshowel@gmail.com</a></li>
+              <li><a href="https://discordapp.com/users/186168160821575691"><span class="custom-icons discord"></span>Kartearis#6865</a></li>
+              <li><a href="https://github.com/Kartearis"><span class="custom-icons github"></span>Kartearis</a></li>
+              <li><span class="material-icons md-24 align">room</span>Saint-Petersburg, Russia</li>
             </ul>
           </div>
         </div>
