--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <img src="./assets/img/photo.jpg" alt="My photo"/>
         </div>
         <div class="data-container">
-          <div class="name-container">
+          <div id="name" class="name-container">
             <h1>Matveev Timofey</h1>
           </div>
-          <div class="contact-container">
+          <div id="contacts" class="contact-container">
             <ul>
               <li><a href="mailto:justshowel@gmail.com"><span class="material-icons md-24 align">email</span>justshowel@gmail.com</a></li>
               <li><a href="https://discordapp.com/users/186168160821575691"><span class="custom-icons discord"></span>Kartearis#6865</a></li>
@@ -33,7 +33,55 @@
       </div>
     </header>
     <main>
-      <div class="container">
+      <div class="container main-layout">
+        <section id="summary">
+          <h2>About</h2>
+          <p>
+            Former student of BSTU "Voenmeh", I continue to study in my own pace while seeking a place to
+            apply my skills. I had some experience developing automated systems for BSTU, but more importantly
+            I can learn to do almost anything, given some time and testing environment (or description of such).
+          </p>
+        </section>
+        <section id="education">
+          <h2>Education</h2>
+          <ul class="dated-list">
+            <li data-dates="2015-2019">BSc at Software Engineering (BSTU "Voenmeh")</li>
+            <li data-dates="2019-2021">MSc at Software Engineering (BSTU "Voenmeh")</li>
+          </ul>
+        </section>
+        <section id="experience">
+          <h2>Experience</h2>
+          <ul class="timeline">
+            <li>4 years of developing Workplace Automation systems at BSTU "Voenmeh", mainly for the admission committee.</li>
+            <li>Development of automated <a href="http://toi.kartearis.xyz">task checker</a> for Theoretical Bases of Informatics discipline at BSTU.</li>
+            <li>Several pet projects such as tabletop map generator, currently unpublished.</li>
+            <li>This <a href="https://kartearis.github.io/rsschool-cv/">CV</a></li>
+          </ul>
+        </section>
+        <section id="skills">
+          <h2>Skills</h2>
+          C
+          - C++ (sdl2, Qt)
+          - JavaScript (jquery, vue.js)
+          - PHP
+          - Python 3 (Qt, flask, Django, SqlAlchemy)
+          - SQL
+          - HTML/CSS
+        </section>
+        <section id="code-example">
+          <h2>Code example</h2>
+          Solution to Codewars Kata [Bit Counting](https://www.codewars.com/kata/526571aae218b8ee490006f4)
+          ```
+          var countBits = function(n) {
+          return n.toString(2).replace(/0/g,'').length;
+          };
+          ```
+        </section>
+        <section id="languages">
+          <h2>Languages</h2>
+          Have a C1 Cambridge ESOL certificate, although dated. Current level must be somewhere near B2.
+
+        </section>
       </div>
     </main>
     <footer>
