feat: Finish skills section and languages section.

--- a/index.html
+++ b/index.html
@@ -60,27 +60,29 @@
         </section>
         <section id="skills">
           <h2>Skills</h2>
-          C
-          - C++ (sdl2, Qt)
-          - JavaScript (jquery, vue.js)
-          - PHP
-          - Python 3 (Qt, flask, Django, SqlAlchemy)
-          - SQL
-          - HTML/CSS
+          <ul class="tag-list">
+            <li>C</li>
+            <li>C++ (sdl2, Qt)</li>
+            <li>JavaScript</li>
+            <li>PHP</li>
+            <li>Python 3 (Qt, flask, Django, SqlAlchemy)</li>
+            <li>SQL</li>
+            <li>HTML/CSS</li>
+          </ul>
         </section>
         <section id="code-example">
           <h2>Code example</h2>
           Solution to Codewars Kata [Bit Counting](https://www.codewars.com/kata/526571aae218b8ee490006f4)
-          ```
+          <pre>
           var countBits = function(n) {
           return n.toString(2).replace(/0/g,'').length;
           };
-          ```
+          </pre>
         </section>
         <section id="languages">
           <h2>Languages</h2>
-          Have a C1 Cambridge ESOL certificate, although dated. Current level must be somewhere near B2.
-
+          <p>English: C1 Cambridge ESOL certificate</p>
+          <p>Russian: Native</p>
         </section>
       </div>
     </main>
