fix: Fix scaling problems and add link styles.

--- a/index.html
+++ b/index.html
@@ -14,21 +14,34 @@
   </head>
   <body>
     <header>
-      <div class="container header-background header-layout">
-        <div class="photo">
-          <img src="./assets/img/photo.jpg" alt="My photo"/>
-        </div>
-        <div class="data-container">
-          <div id="name" class="name-container">
-            <h1>Matveev Timofey</h1>
+      <div class="container header-background header-layout-nav">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="#summary" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+            <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+            <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+            <li class="nav-item"><a href="#code-example" class="nav-link">Code</a></li>
+            <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+          </ul>
+        </nav>
+        <div class="header-layout">
+          <div class="photo">
+            <img src="./assets/img/photo.jpg" alt="My photo"/>
           </div>
-          <div id="contacts" class="contact-container">
-            <ul>
-              <li><a href="mailto:justshowel@gmail.com"><span class="material-icons md-24 align">email</span>justshowel@gmail.com</a></li>
-              <li><a href="https://discordapp.com/users/186168160821575691"><span class="custom-icons discord"></span>Kartearis#6865</a></li>
-              <li><a href="https://github.com/Kartearis"><span class="custom-icons github"></span>Kartearis</a></li>
-              <li><span class="material-icons md-24 align">room</span>Saint-Petersburg, Russia</li>
-            </ul>
+          <div class="data-container">
+            <div id="name" class="name-container">
+              <h1>Matveev Timofey</h1>
+            </div>
+            <div id="contacts" class="contact-container">
+              <ul>
+                <li><a href="mailto:justshowel@gmail.com"><span class="material-icons md-24 align">email</span>justshowel@gmail.com</a></li>
+                <li><a href="https://discordapp.com/users/186168160821575691"><span class="custom-icons discord"></span>Kartearis#6865</a></li>
+                <li><a href="https://github.com/Kartearis"><span class="custom-icons github"></span>Kartearis</a></li>
+                <li><span class="material-icons md-24 align">room</span>Saint-Petersburg, Russia</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
