feat: Make navigation column at 799 px

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </section>
         <section id="code-example">
           <h2>Code example</h2>
-          <p> Solution to Codewars Kata <a href="https://www.codewars.com/kata/526571aae218b8ee490006f4">Bit Counting</a></p>
+          <p> Solution to Codewars Kata <a href="https://www.codewars.com/kata/526571aae218b8ee490006f4">Bit Counting</a> (scrollable on small screens).</p>
           <pre class="code-container">
             <code>
             var countBits = function(n) {
